--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ input{
 input:focus{
     outline: none;
     border: 1px solid darkblue;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 input:valid{
